--- a/projects/Project 4/P4L4.html
+++ b/projects/Project 4/P4L4.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css">
   <link rel="stylesheet" href="../../style/project.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <title>Portfolio</title>
+  <title>Landing page 4</title>
 </head>
 
 <body>
@@ -32,9 +32,7 @@
   </div>
   <div class="logos">
     <img src="../../images/img-HTML.png" alt="HTML">
-    <img src="../../images/img-CSS.png" alt="CSS">
     <img src="../../images/img-SASS.png" alt="SASS">
-    <img src="../../images/img-Bootstrap.png" alt="BOOTSTRAP">
   </div>
   <div class="imgC">
     <img src="../Project 4/images/pppppppp.png" >
