--- a/projects/Project 3/P3L3.html
+++ b/projects/Project 3/P3L3.html
@@ -28,7 +28,7 @@
     
     </p>
     <a class="btn btn-info" href="index.html">לעמוד הפרוייקט</a> 
-    <a class="btn btn-info" href="project 3.zip" download="project.zip">הורדת הפרוייקט</a>
+    <a class="btn btn-info" href="Project 3.zip" download="">הורדת הפרוייקט</a>
     
   </div>
   <div class="logos">
