--- a/projects/Project 1/P1L1.html
+++ b/projects/Project 1/P1L1.html
@@ -28,7 +28,7 @@
     
     </p>
     <a class="btn btn-info" href="index.html">לעמוד הפרוייקט</a> 
-    <a class="btn btn-info" href="project 1.zip" download="project.zip">הורדת הפרוייקט</a>
+    <a class="btn btn-info" href="Project 1.zip" download="">הורדת הפרוייקט</a>
   </div>
   <div class="logos">
     
