--- a/projects/Project 4/P4L4.html
+++ b/projects/Project 4/P4L4.html
@@ -28,7 +28,7 @@
       <br>
     </p>
     <a class="btn btn-info" href="index.html">לעמוד הפרוייקט</a> 
-    <a class="btn btn-info" href="project 4.zip" download="project.zip">הורדת הפרוייקט</a>
+    <a class="btn btn-info" href="Project 4.zip" download="">הורדת הפרוייקט</a>
   </div>
   <div class="logos">
     <img src="../../images/img-HTML.png" alt="HTML">
