--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     </p>
     <div class="but">
-      <button type="button" class="but1">להורדת קורות חיים</button>
+      <a href="CV8.pdf" download=""><button type="button" class="but1">להורדת קורות חיים</button></a>
     </div>
   </section>
   <section id="gallery">
