--- a/index.html
+++ b/index.html
@@ -47,10 +47,15 @@
     </p>
   </div>
   <div class="logos">
-    <img src="images/img-HTML.png" alt="HTML">
-    <img src="images/img-CSS.png" alt="CSS">
-    <img src="images/img-SASS.png" alt="SASS">
-    <img src="images/img-Bootstrap.png" alt="BOOTSTRAP">
+    <img src="images/HTML.png" alt="HTML" id="ts" class="new">
+    <img src="images/CSS.png" alt="CSS" id="ts" class="new">
+    <img src="images/SASS.png" alt="SASS"  id="ts" class="new">
+    <img src="images/BOOTSTRAP.png" alt="BOOTSTRAP" id="ts" class="new">
+    <img src="images/JSicon.png" alt="API" class="new" style="height: 50px; margin-left: 8px;">
+    <img src="images/OOP3.png" alt="OOP" class="new oop">
+    <img src="images/es6icon.png" alt="ES6" class="new">
+    <img src="images/newts.png" alt="TYPESCRIPT" id="ts" class="new">
+    <img src="images/api2.png" alt="API" class="new">
   </div>
   <section id="about" class="mt-4 p-5">
     <img src="images/smile.png" alt="">
@@ -66,7 +71,7 @@
     </div>
   </section>
   <section id="gallery">
-    <h2>עבודות נבחרות</h2>
+    <h2>HTML & CSS Projects</h2>
 
     <div class="row">
       <div class="col-sm-4">
@@ -77,6 +82,78 @@
             <p class="card-text">בפרוייקט הזה השתמשתי בBootstrap כדי לבנות דף נחיתה</p>
 
             <a href="projects/Project 1/P1L1.html" target="_blank" class="btn btn-info">לעמוד הפרוייקט</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card">
+          <img class="card-img-top" src="images/blueandgreen.png" alt="Card image">
+          <div class="card-body">
+            <h4 class="card-title">CSS&HTML</h4>
+            <p class="card-text">בפרוייקט הזה השתמשתי בCSS&HTML כדי לבנות דף נחיתה</p>
+
+            <a href="projects/Project 2/P2L2.html" target="_blank" class="btn btn-info">לעמוד הפרוייקט</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card">
+          <img class="card-img-top" src="images/pinky.png" alt="Card image">
+          <div class="card-body">
+            <h4 class="card-title">SCSS</h4>
+            <p class="card-text">בפרוייקט הזה השתמשתי בSCSS כדי לבנות דף נחיתה</p>
+
+            <a href="projects/Project 3/P3L3.html" target="_blank" class="btn btn-info">לעמוד הפרוייקט</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card">
+          <img class="card-img-top" src="projects/Project 4/images/pppppppp.png" alt="Card image">
+          <div class="card-body">
+            <h4 class="card-title">SCSS&HTML</h4>
+            <p class="card-text">בפרוייקט הזה השתמשתי בSCSS&HTML כדי לבנות דף נחיתה</p>
+
+            <a href="projects/Project 4/P4L4.html" target="_blank" class="btn btn-info">לעמוד הפרוייקט</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card">
+          <img class="card-img-top" src="images/mountin.png" alt="Card image">
+          <div class="card-body">
+            <h4 class="card-title">שם הפרוייקט</h4>
+            <p class="card-text">לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית סחטיר בלובק.</p>
+
+            <a href="#" class="btn btn-info">לעמוד הפרוייקט</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card">
+          <img class="card-img-top" src="images/menu.png" alt="Card image">
+          <div class="card-body">
+            <h4 class="card-title">שם הפרוייקט</h4>
+            <p class="card-text">לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית סחטיר בלובק.</p>
+
+            <a href="#" class="btn btn-info">לעמוד הפרוייקט</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="gallery">
+    <h2>JaveScript Projects</h2>
+
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="card">
+          <img class="card-img-top" src="./JS-TS-Projects/project1/assets/images/landingSC.png" alt="Card image">
+          <div class="card-body">
+            <h4 class="card-title">Snake</h4>
+            <p class="card-text">בפרוייקט הזה השתמשתי בJavaScript כדי לבנות את המשחק סנייק</p>
+
+            <a href="./JS-TS-Projects/project1/L1P1.html" target="_blank" class="btn btn-info">לעמוד הפרוייקט</a>
           </div>
         </div>
       </div>
