--- a/JS-TS-Projects/project1/L1P1.html
+++ b/JS-TS-Projects/project1/L1P1.html
@@ -32,7 +32,7 @@
   </div>
   <div class="logos">
     
-    <img src="/images/JSicon.png" alt="JavaScript" class="new" style="height: 50px;">
+    <img src="../../images/JSicon.png" alt="JavaScript" class="new" style="height: 50px;">
   </div>
   <div class="imgC">
     <img src="../project1/assets/images/landingSC.png" >
