--- a/index.html
+++ b/index.html
@@ -170,23 +170,23 @@
       </div>
       <div class="col-sm-4">
         <div class="card">
-          <img class="card-img-top" src="images/pinky.png" alt="Card image">
+          <img class="card-img-top" src="JS-TS-Projects/project3/images/bg6.png" alt="Card image">
           <div class="card-body">
-            <h4 class="card-title">SCSS</h4>
+            <h4 class="card-title">TypeScript</h4>
             <p class="card-text">בפרוייקט הזה השתמשתי בSCSS כדי לבנות דף נחיתה</p>
 
-            <a href="projects/Project 3/P3L3.html" target="_blank" class="btn btn-info">לעמוד הפרוייקט</a>
+            <a href="JS-TS-Projects/project3/L3P3.html" target="_blank" class="btn btn-info">לעמוד הפרוייקט</a>
           </div>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="card">
-          <img class="card-img-top" src="projects/Project 4/images/pppppppp.png" alt="Card image">
+          <img class="card-img-top" src="JS-TS-Projects/project4/images/tictac.png" alt="Card image">
           <div class="card-body">
-            <h4 class="card-title">SCSS&HTML</h4>
-            <p class="card-text">בפרוייקט הזה השתמשתי בSCSS&HTML כדי לבנות דף נחיתה</p>
+            <h4 class="card-title">TicTacToe</h4>
+            <p class="card-text">בפרוייקט הזה השתמשתי בJavaScript כדי לבנות את המשחק איקס עיגול</p>
 
-            <a href="projects/Project 4/P4L4.html" target="_blank" class="btn btn-info">לעמוד הפרוייקט</a>
+            <a href="JS-TS-Projects/project4/L2P2.html" target="_blank" class="btn btn-info">לעמוד הפרוייקט</a>
           </div>
         </div>
       </div>
