--- a/JS-TS-Projects/project3/L3P3.html
+++ b/JS-TS-Projects/project3/L3P3.html
@@ -22,8 +22,8 @@
     </div>
   </nav>
   <div id="maim" class="mt-4 p-5 main">
-    <h1 style="color: rgb(4, 63, 63);">פרוייקט מספר 4:TicTacToe</h1>
-    <p> בפרוייקט זה השתמשתי בJavaScript כדי לבנות את המשחק איקס עיגול 
+    <h1 style="color: rgb(4, 63, 63);">פרוייקט מספר 3:Task Manager</h1>
+    <p> בפרוייקט זה השתמשתי בTypeScript כדי לבנות מנהל משימות   
       <br>
     
     </p>
@@ -33,7 +33,7 @@
   <div class="logos">
     <img src="../../images/HTML.png" alt="html" id="ts" class="new">
     <img src="../../images/CSS.png" alt="css" id="ts" class="new">
-    <img src="../../images/TSicon.png" alt="JavaScript" id="ts"  class="new" style="height: 43px;">
+    <img src="../../images/TSicon.png" alt="JavaScript" id="ts"  class="new">
   </div>
   <div class="imgC">
     <img src="images/bg6.png" >
