--- a/JS-TS-Projects/project1/L1P1.html
+++ b/JS-TS-Projects/project1/L1P1.html
@@ -31,8 +31,9 @@
     <a class="btn btn-info" href="Project 1.zip" download="">הורדת הפרוייקט</a>
   </div>
   <div class="logos">
-    
-    <img src="../../images/JSicon.png" alt="JavaScript" class="new" style="height: 50px;">
+    <img src="../../images/HTML.png" alt="html" class="new" id="ts">
+    <img src="../../images/CSS.png" alt="css" class="new" id="ts">
+    <img src="../../images/JSicon.png" alt="JavaScript" class="new" style="height: 49px;">
   </div>
   <div class="imgC">
     <img src="../project1/assets/images/landingSC.png" >
