--- a/JS-TS-Projects/project4/index.html
+++ b/JS-TS-Projects/project4/index.html
@@ -14,8 +14,8 @@
 <body>
     <div class="frame">
         <h1>איקס עיגול</h1>
-        <p>לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית סחטיר בלובק. תצטנפל בלינדו למרקל אס לכימפו, תצטנפל צוט</p>
-        <p class="score">תוצאה: <br> <br> X = <b class="scoreX">0</b><span class="margin"></span>0 = <b class="scoreO">0</b></p>
+        <p>לורם איפסום דולור סיט אמט,  אדיפיסינג אלית סחטיר .  בלינדו  אס , תצטנפל צוט</p>
+        <p class="score">תוצאה: <br><br>X = <b class="scoreX">0</b><span class="margin"></span>0 = <b class="scoreO">0</b></p>
         <button class="btn2" onclick="resetScore()">איפוס תוצאות</button>
         <div class="board"></div>
         <button onclick="reset()">משחק חדש</button>
