--- a/JS-TS-Projects/project2/login.html
+++ b/JS-TS-Projects/project2/login.html
@@ -27,6 +27,7 @@
 
             <button onclick="login()">התחבר</button>
         </div>
+        <p>אין לך עדיין משתמש? <a href="index.html">לחץ כאן להרשמה</a></p>
 
         <div class="user">
             <span class="userName"></span>
