--- a/JS-TS-Projects/project1/L1P1.html
+++ b/JS-TS-Projects/project1/L1P1.html
@@ -33,6 +33,7 @@
   <div class="logos">
     <img src="../../images/HTML.png" alt="html" class="new" id="ts">
     <img src="../../images/CSS.png" alt="css" class="new" id="ts">
+    <img src="../../images/SASS.png" alt="css" class="new" id="ts">
     <img src="../../images/JSicon.png" alt="JavaScript" class="new" style="height: 49px;">
   </div>
   <div class="imgC">
