--- a/JS-TS-Projects/project1/index.html
+++ b/JS-TS-Projects/project1/index.html
@@ -15,6 +15,12 @@
     <div class="frame">
         <div class="board"></div>
         <p>Score: <b class="score">0</b> <span class="margin"></span>Highscore: <b class="highscore">0</b> <span class="margin"></span><br>  Time: <b class="timer">00:00</b></p>
+        <section class="arrowKeys">
+            <button class="arrowRight" onclick="move('right')">►</button>
+            <button class="arrowUp" onclick="move('up')">▲</button>
+            <button class="arrowDown" onclick="move('down')">▼</button>
+            <button class="arrowLeft" onclick="move('left')">◄</button>
+        </section>
     </div>
 </body>
 
