--- a/JS-TS-Projects/project4/L4P4.html
+++ b/JS-TS-Projects/project4/L4P4.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css">
   <link rel="stylesheet" href="../../style/project.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <title>Landing Page 3</title>
+  <title>Landing Page 4</title>
 </head>
 
 <body>
@@ -22,8 +22,8 @@
     </div>
   </nav>
   <div id="maim" class="mt-4 p-5 main">
-    <h1 style="color: rgb(4, 63, 63);">פרוייקט מספר 3:Task Manager</h1>
-    <p> בפרוייקט זה השתמשתי בTypeScript כדי לבנות מנהל משימות   
+    <h1 style="color: rgb(4, 63, 63);">פרוייקט מספר 4:TicTacToe</h1>
+    <p> בפרוייקט זה השתמשתי בJavaScript כדי לבנות את המשחק איקס עיגול 
       <br>
     
     </p>
@@ -33,10 +33,10 @@
   <div class="logos">
     <img src="../../images/HTML.png" alt="html" id="ts" class="new">
     <img src="../../images/CSS.png" alt="css" id="ts" class="new">
-    <img src="../../images/TSicon.png" alt="JavaScript" id="ts"  class="new">
+    <img src="../../images/JSicon.png" alt="JavaScript" class="new" style="height: 50px;">
   </div>
   <div class="imgC">
-    <img src="images/bg6.png" >
+    <img src="images/tictac.png" >
   </div>
   
  
