--- a/JS-TS-Projects/project6/index.html
+++ b/JS-TS-Projects/project6/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>פאזל מספרים</title>
+    <title>פאזל תמונת</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
@@ -12,7 +12,7 @@
 </head>
 
 <body onload="createBoard()">
-    <h1>פאזל מספרים</h1>
+    <h1>פאזל תמונות</h1>
     <p>מספר צעדים: <b class="counter">0</b> <span class="margin"></span> טיימר: <b class="timer">00:00</b></p>
     <div class="frame">
         <div class="board"></div>
