--- a/JS-TS-Projects/project6/L6P6.html
+++ b/JS-TS-Projects/project6/L6P6.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css">
   <link rel="stylesheet" href="../../style/project.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <title>Landing Page 1</title>
+  <title>Landing Page 6</title>
 </head>
 
 <body>
@@ -22,8 +22,8 @@
     </div>
   </nav>
   <div id="maim" class="mt-4 p-5 main">
-    <h1 style="color: rgb(4, 63, 63);">פרוייקט מספר 4:TicTacToe</h1>
-    <p> בפרוייקט זה השתמשתי בJavaScript כדי לבנות את המשחק איקס עיגול 
+    <h1 style="color: rgb(4, 63, 63);">פרוייקט מספר 5:Projects Gallery</h1>
+    <p>בפרוייקט הזה השתמשתי בJavaScript כדי לבנות משחק פאזל תמונות          
       <br>
     
     </p>
@@ -31,12 +31,12 @@
     <a class="btn btn-info" href="Project 1.zip" download="">הורדת הפרוייקט</a>
   </div>
   <div class="logos">
-    <img src="../../images/HTML.png" alt="html" id="ts" class="new">
-    <img src="../../images/CSS.png" alt="css" id="ts" class="new">
-    <img src="../../images/JSicon.png" alt="JavaScript" class="new" style="height: 50px;">
+    <img src="../../images/HTML.png" alt="html" class="new" id="ts">
+    <img src="../../images/CSS.png" alt="css" class="new" id="ts">
+    <img src="../../images/JSicon.png" alt="JavaScript" class="new" style="height: 49px;">
   </div>
   <div class="imgC">
-    <img src="images/tictac.png" >
+    <img src="../project6/images/landingPic6.png" >
   </div>
   
  
