--- a/JS-TS-Projects/project2/L2P2.html
+++ b/JS-TS-Projects/project2/L2P2.html
@@ -28,7 +28,7 @@
 
         </p>
         <a class="btn btn-info" href="index.html">לעמוד הפרוייקט</a>
-        <a class="btn btn-info" href="Project 1.zip" download="">הורדת הפרוייקט</a>
+        <a class="btn btn-info" href="project2.zip" download="">הורדת הפרוייקט</a>
     </div>
     <div class="logos">
         <img src="../../images/apiIcon.png" alt="css" class="new" id="ts">
