--- a/JS-TS-Projects/project6/L6P6.html
+++ b/JS-TS-Projects/project6/L6P6.html
@@ -22,13 +22,13 @@
     </div>
   </nav>
   <div id="maim" class="mt-4 p-5 main">
-    <h1 style="color: rgb(4, 63, 63);">פרוייקט מספר 5:Projects Gallery</h1>
+    <h1 style="color: rgb(4, 63, 63);">פרוייקט מספר 6: Picture Puzzle</h1>
     <p>בפרוייקט הזה השתמשתי בJavaScript כדי לבנות משחק פאזל תמונות          
       <br>
     
     </p>
     <a class="btn btn-info" href="index.html">לעמוד הפרוייקט</a> 
-    <a class="btn btn-info" href="Project 1.zip" download="">הורדת הפרוייקט</a>
+    <a class="btn btn-info" href="project6.zip" download="">הורדת הפרוייקט</a>
   </div>
   <div class="logos">
     <img src="../../images/HTML.png" alt="html" class="new" id="ts">
