--- a/index.html
+++ b/index.html
@@ -212,6 +212,17 @@
           </div>
         </div>
       </div>
+      <div class="col-sm-4">
+        <div class="card">
+          <img class="card-img-top" src="JS-TS-Projects/project7/images/memory.png" alt="Card image">
+          <div class="card-body">
+            <h4 class="card-title">Memory Game(Bonus) </h4>
+            <p class="card-text">בפרוייקט הזה השתמשתי בJavaScript כדי לבנות משחק זיכרון</p>
+            
+            <a href="JS-TS-Projects/project7/L7P7.html" class="btn btn-info">לעמוד הפרוייקט</a>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <section id="contact" class="mt-4 p-5">
