--- a/JS-TS-Projects/project1/L1P1.html
+++ b/JS-TS-Projects/project1/L1P1.html
@@ -28,7 +28,7 @@
     
     </p>
     <a class="btn btn-info" href="index.html">לעמוד הפרוייקט</a> 
-    <a class="btn btn-info" href="Project 1.zip" download="">הורדת הפרוייקט</a>
+    <a class="btn btn-info" href="project1.zip" download="">הורדת הפרוייקט</a>
   </div>
   <div class="logos">
     <img src="../../images/HTML.png" alt="html" class="new" id="ts">
