--- a/JS-TS-Projects/project2/index.html
+++ b/JS-TS-Projects/project2/index.html
@@ -9,9 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="c1">
-       
-    </div>
+    <div class="c1"></div>
     <div class="frame">
         <div class="signUp">
             <h1>מערכת הרשמה</h1>
