--- a/contact-info.html
+++ b/contact-info.html
@@ -25,11 +25,34 @@
   <div class="mt-4 p-5 main contact contactDone">
     <h3>תודה על הפניה! פרטי השליחה:</h3>
     <p><b>שם:</b> <span></span></p>
-    <p><b>אימייל:</b> <span></span></p>
+    <p class="email"><b>אימייל:</b> <span></span></p>
     <p><b>טלפון:</b> <span></span></p>
     <p><b>תוכן:</b> <span></span></p>
   </div>
-  
+  <div class="logos">
+    <img src="images/HTML.png" alt="HTML" id="ts" class="new">
+    <img src="images/CSS.png" alt="CSS" id="ts" class="new">
+    <img src="images/SASS.png" alt="SASS"  id="ts" class="new">
+    <img src="images/BOOTSTRAP.png" alt="BOOTSTRAP" id="ts" class="new">
+    <img src="images/JSicon.png" alt="API" class="new" style="height: 50px; margin-left: 8px;">
+    <img src="images/OOP3.png" alt="OOP" class="new oop">
+    <img src="images/es6icon.png" alt="ES6" class="new">
+    <img src="images/newts.png" alt="TYPESCRIPT" id="ts" class="new">
+    <img src="images/api2.png" alt="API" class="new">
+  </div>
+  <section id="about" class="mt-4 p-5">
+    <img src="images/smile.png" alt="">
+    <h2>קצת עלי</h2>
+    <p>לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית סחטיר בלובק. תצטנפל בלינדו למרקל אס לכימפו, דול, צוט ומעיוט -
+      לפתיעם ברשג - ולתיעם גדדיש. קוויז דומור ליאמום בלינך חקיגו רוגצה.
+      לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית סחטיר בלובק. תצטנפל בלינדו למרקל אס לכימפו, דול, צוט ומעיוט -
+      לפתיעם ברשג - ולתיעם גדדיש. קוויז דומור ליאמום בלינך חקיגו רוגצה.
+
+    </p>
+    <div class="but">
+      <a href="CV8.pdf" download=""><button type="button" class="but1">להורדת קורות חיים</button></a>
+    </div>
+  </section>
   
   <section id="links" class="row">
     <div class="col-sm-2">
