--- a/index.html
+++ b/index.html
@@ -234,13 +234,13 @@
         
         <form onsubmit="send(event)">
           <label class="form-label">שם:</label>
-          <input class="form-control" type="name">
+          <input class="form-control" type="name" name="name">
 
         <label class="form-label">אימייל:</label>
-        <input class="form-control" type="email">
+        <input class="form-control" type="email" name="email">
 
         <label class="form-label">טלפון:</label>
-        <input class="form-control" type="phone">
+        <input class="form-control" type="phone" name="phone">
 
         <label class="form-label">הודעה:</label>
         <textarea class="form-control" cols="30" rows="10" name="message"></textarea>
