--- a/contact-info.html
+++ b/contact-info.html
@@ -25,7 +25,7 @@
   <div class="mt-4 p-5 main contact contactDone">
     <h3>תודה על הפניה! פרטי השליחה:</h3>
     <p><b>שם:</b> <span></span></p>
-    <p class="email"><b>אימייל:</b> <span></span></p>
+    <p><b>אימייל:</b> <span></span></p>
     <p><b>טלפון:</b> <span></span></p>
     <p><b>תוכן:</b> <span></span></p>
   </div>
