--- a/JS-TS-Projects/project5/L5P5.html
+++ b/JS-TS-Projects/project5/L5P5.html
@@ -31,7 +31,7 @@
     <a class="btn btn-info" href="project5.zip" download="">הורדת הפרוייקט</a>
   </div>
   <div class="logos">
-    <img src="../../images/OOPicon.png" alt="css" class="new" id="ts">
+    <img src="../../images/OOP3.png" alt="css" class="new" id="ts">
     <img src="../../images/HTML.png" alt="html" class="new" id="ts">
     <img src="../../images/CSS.png" alt="css" class="new" id="ts">
     <img src="../../images/SASS.png" alt="css" class="new" id="ts">
